--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             />
         </div>
         <div class="buttons-container">
-            <button id="left">Prev</button>
-            <button id="right">Next</button>
+            <button class="btn" id="left"> < Prev</button>
+            <button class="btn" id="right">Next ></button>
         </div>
     </div>
 
